--- a/packages/eslint-plugin-lo/package.json
+++ b/packages/eslint-plugin-lo/package.json
@@ -19,13 +19,12 @@
     "build": "rimraf dist && unbuild",
     "stub": "unbuild --stub",
     "test": "vitest",
-    "prepublishOnly": "nr build"
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@typescript-eslint/utils": "^5.17.0"
   },
   "devDependencies": {
-    "nr": "^0.1.0",
     "unbuild": "^0.7.0",
     "vitest": "^0.8.2"
   }
