--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bumpp": "^7.1.1",
     "eslint": "^8.13.0",
     "eslint-plugin-lo": "workspace:*",
+    "pnpm": "^6.32.6",
     "typescript": "^4.6.3"
   }
 }
