--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lo/eslint-config-monorepo",
+  "name": "@lotwt/eslint-config-monorepo",
   "version": "0.0.5",
   "private": true,
   "license": "MIT",
@@ -11,10 +11,10 @@
     "pub": "pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@lo/eslint-config": "workspace:*",
+    "@lotwt/eslint-config": "workspace:*",
     "bumpp": "^7.1.1",
     "eslint": "^8.13.0",
-    "eslint-plugin-lo": "workspace:*",
+    "eslint-plugin-lotwt": "workspace:*",
     "pnpm": "^6.32.6",
     "typescript": "^4.6.3"
   }
