--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lo/eslint-config-ts",
+  "name": "@lotwt/eslint-config-ts",
   "version": "0.0.5",
   "description": "",
   "keywords": [],
@@ -17,7 +17,7 @@
     "typescript": ">=3.9"
   },
   "dependencies": {
-    "@lo/eslint-config-basic": "workspace:*",
+    "@lotwt/eslint-config-basic": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0"
   },
