--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -43,6 +43,8 @@
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
-    "eslint": "^8.41.0"
+    "@sxzz/eslint-config-prettier": "^2.4.6",
+    "eslint": "^8.41.0",
+    "prettier": "^2.8.8"
   }
 }
