feat: remove verbose tsconfig include

--- a/packages/eslint-config-basic/tsconfig.json
+++ b/packages/eslint-config-basic/tsconfig.json
@@ -11,5 +11,5 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
   },
-  "include": ["**/*.ts", "shims.d.ts"]
+  "include": ["**/*.ts"]
 }
