--- a/packages/eslint-config-prettier/tsconfig.json
+++ b/packages/eslint-config-prettier/tsconfig.json
@@ -11,5 +11,5 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
   },
-  "include": ["**/*.ts", "shims.d.ts"]
+  "include": ["**/*.ts"]
 }
