--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "eslint-config-monorepo",
   "version": "0.2.7",
-  "private": true,
-  "packageManager": "pnpm@8.6.12",
   "description": "eslint-config",
+  "type": "module",
+  "private": true,
+  "packageManager": "pnpm@8.7.0",
   "author": "LoTwT <l709937065@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "pnpm -r run build",
-    "lint": "eslint .",
+    "lint": "ESLINT_USE_FLAT_CONFIG=true eslint --config eslint.config.js .",
     "prettier": "prettier --write .",
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks",
@@ -17,12 +18,12 @@
     "release": "bumpp -r && pnpm -r publish"
   },
   "devDependencies": {
-    "@ayingott/eslint-config": "^0.2.7",
-    "@types/node": "^20.5.6",
+    "@ayingott/eslint-config": "workspace:^",
+    "@types/node": "^20.5.7",
     "bumpp": "^9.2.0",
-    "eslint": "^8.47.0",
+    "eslint": "^8.48.0",
     "lint-staged": "^14.0.1",
-    "pnpm": "^8.6.12",
+    "pnpm": "^8.7.0",
     "prettier": "^3.0.2",
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.11.2",
@@ -33,8 +34,5 @@
   },
   "lint-staged": {
     "*": "eslint --fix"
-  },
-  "eslintConfig": {
-    "extends": "@ayingott/eslint-config"
   }
 }
