--- a/packages/eslint-config-basic/package.json
+++ b/packages/eslint-config-basic/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@ayingott/eslint-config-basic",
   "version": "0.2.7",
-  "packageManager": "pnpm@8.6.12",
   "description": "@ayingott/eslint-config-basic",
+  "packageManager": "pnpm@8.7.0",
   "author": "LoTwT <l709937065@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/LoTwT/eslint-config#readme",
@@ -41,14 +41,16 @@
   "scripts": {
     "build": "tsup"
   },
+  "dependencies": {
+    "@sxzz/eslint-config": "^3.4.0",
+    "eslint-plugin-jsonc": "^2.9.0",
+    "eslint-plugin-yml": "^1.8.0"
+  },
   "devDependencies": {
-    "eslint": "^8.47.0",
+    "eslint": "^8.48.0",
     "eslint-define-config": "^1.23.0",
-    "pnpm": "^8.6.12",
+    "pnpm": "^8.7.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@sxzz/eslint-config": "^3.4.0"
   }
 }
