--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@ayingott/eslint-config": "workspace:^",
+    "@ayingott/prettier-config": "^0.1.0",
     "@types/node": "^20.5.7",
     "bumpp": "^9.2.0",
     "eslint": "^8.48.0",
@@ -36,5 +37,6 @@
       "eslint --fix",
       "prettier --write --ignore-unknown"
     ]
-  }
+  },
+  "prettier": "@ayingott/prettier-config"
 }
