--- a/packages/eslint-config-basic/package.json
+++ b/packages/eslint-config-basic/package.json
@@ -42,9 +42,21 @@
     "build": "tsup"
   },
   "dependencies": {
+    "@eslint/js": "^8.48.0",
     "@sxzz/eslint-config": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-antfu": "^0.41.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsonc": "^2.9.0",
-    "eslint-plugin-yml": "^1.8.0"
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-yml": "^1.8.0",
+    "globals": "^13.21.0",
+    "jsonc-eslint-parser": "^2.3.0",
+    "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
