--- a/packages/eslint-config-markdown/package.json
+++ b/packages/eslint-config-markdown/package.json
@@ -42,7 +42,8 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@sxzz/eslint-config": "^3.4.0"
+    "@sxzz/eslint-config": "^3.4.0",
+    "eslint-plugin-markdown": "^3.0.1"
   },
   "devDependencies": {
     "eslint-config": "^0.3.0",
