--- a/packages/eslint-config-unocss/package.json
+++ b/packages/eslint-config-unocss/package.json
@@ -42,7 +42,8 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@sxzz/eslint-config": "^3.4.0"
+    "@sxzz/eslint-config": "^3.4.0",
+    "@unocss/eslint-plugin": "^0.55.3"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
