--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -42,7 +42,9 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@sxzz/eslint-config": "^3.4.0"
+    "@sxzz/eslint-config": "^3.4.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "vue-eslint-parser": "^9.3.1"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
