--- a/packages/eslint-config-markdown/package.json
+++ b/packages/eslint-config-markdown/package.json
@@ -43,7 +43,12 @@
   },
   "dependencies": {
     "@sxzz/eslint-config": "^3.5.1",
-    "eslint-plugin-markdown": "^3.0.1"
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "eslint-plugin-antfu": "^0.41.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-markdown": "^3.0.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-unused-imports": "^3.0.0"
   },
   "devDependencies": {
     "eslint-config": "^0.3.0",
