--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@sxzz/eslint-config": "^3.5.1",
+    "@typescript-eslint/parser": "^6.5.0",
     "eslint-plugin-vue": "^9.17.0",
     "vue-eslint-parser": "^9.3.1"
   },
