--- a/packages/eslint-config-markdown/package.json
+++ b/packages/eslint-config-markdown/package.json
@@ -43,16 +43,10 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@sxzz/eslint-config": "^3.5.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "eslint-plugin-antfu": "^0.43.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-unused-imports": "^3.0.0"
+    "@sxzz/eslint-config": "^3.6.1",
+    "eslint-plugin-n": "^16.1.0"
   },
   "devDependencies": {
-    "eslint-config": "^0.3.0",
     "eslint-define-config": "^1.23.0",
     "pnpm": "^8.7.6",
     "tsup": "^7.2.0",
