--- a/packages/eslint-config-unocss/package.json
+++ b/packages/eslint-config-unocss/package.json
@@ -43,11 +43,9 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@sxzz/eslint-config": "^3.5.4",
-    "@unocss/eslint-plugin": "^0.56.0"
+    "@sxzz/eslint-config": "^3.6.1"
   },
   "devDependencies": {
-    "eslint": "^8.49.0",
     "eslint-define-config": "^1.23.0",
     "pnpm": "^8.7.6",
     "tsup": "^7.2.0",
