--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -43,13 +43,9 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@sxzz/eslint-config": "^3.5.4",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint-plugin-vue": "^9.17.0",
-    "vue-eslint-parser": "^9.3.1"
+    "@sxzz/eslint-config": "^3.6.1"
   },
   "devDependencies": {
-    "eslint": "^8.49.0",
     "eslint-define-config": "^1.23.0",
     "pnpm": "^8.7.6",
     "tsup": "^7.2.0",
