--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -43,6 +43,7 @@
     "build": "tsup"
   },
   "dependencies": {
+    "@ayingott/sucrose": "^0.0.34",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
