--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -43,8 +43,11 @@
   },
   "dependencies": {
     "@ayingott/sucrose": "^0.0.37",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2"
+    "@eslint-react/eslint-plugin": "^1.5.12",
+    "@typescript-eslint/parser": "^7.10.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "local-pkg": "^0.5.0"
   },
   "devDependencies": {
     "eslint": "^9.3.0",
