--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -47,9 +47,11 @@
     "@typescript-eslint/parser": "^7.10.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "fs-extra": "^11.2.0",
     "local-pkg": "^0.5.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "eslint": "^9.3.0",
     "eslint-define-config": "^2.1.0",
     "tsup": "^8.0.2",
