--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@ayingott/eslint-config",
-  "version": "0.10.2",
-  "description": "@ayingott/eslint-config",
   "type": "module",
+  "version": "0.10.2",
   "packageManager": "pnpm@9.1.3",
+  "description": "@ayingott/eslint-config",
   "author": "LoTwT <l709937065@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/LoTwT/eslint-config#readme",
@@ -20,8 +20,8 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "main": "./dist/index.cjs",
@@ -41,18 +41,16 @@
   "scripts": {
     "build": "tsup"
   },
+  "peerDependencies": {
+    "eslint": ">=9.0.0",
+    "prettier": ">=3.0.0"
+  },
   "dependencies": {
-    "@ayingott/eslint-config-basic": "workspace:*",
-    "@ayingott/eslint-config-markdown": "workspace:*",
+    "@antfu/eslint-config": "^2.19.0",
     "@ayingott/eslint-config-prettier": "workspace:*",
-    "@ayingott/eslint-config-react": "workspace:*",
-    "@ayingott/eslint-config-unocss": "workspace:*",
-    "@ayingott/eslint-config-vue": "workspace:*",
-    "@ayingott/sucrose": "^0.0.37"
+    "eslint-plugin-format": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^9.3.0",
-    "eslint-define-config": "^2.1.0",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   }
