--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.12.12",
     "bumpp": "^9.4.1",
     "eslint": "^9.3.0",
+    "eslint-plugin-format": "^0.1.1",
     "lint-staged": "^15.2.5",
     "prettier": "^3.2.5",
     "simple-git-hooks": "^2.11.1",
