--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -47,7 +47,8 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^2.19.0",
-    "@ayingott/eslint-config-prettier": "workspace:*"
+    "@ayingott/eslint-config-prettier": "workspace:*",
+    "@ayingott/prettier-config": "^0.3.3"
   },
   "devDependencies": {
     "tsup": "^8.0.2",
