refactor: sync config

--- a/packages/eslint-config-prettier/package.json
+++ b/packages/eslint-config-prettier/package.json
@@ -46,11 +46,12 @@
     "prettier": ">=3.0.0"
   },
   "dependencies": {
+    "@ayingott/sucrose": "^0.0.37",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.19.0",
+    "@antfu/eslint-config": "^2.19.1",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   }
