--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -46,11 +46,46 @@
     "prettier": ">=3.0.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^2.19.0",
+    "@antfu/eslint-config": "^2.19.1",
     "@ayingott/eslint-config-prettier": "workspace:*",
-    "@ayingott/prettier-config": "^1.1.2"
+    "@ayingott/sucrose": "^0.0.37",
+    "@eslint-react/eslint-plugin": "^1.5.13",
+    "@stylistic/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "@unocss/eslint-plugin": "^0.60.3",
+    "eslint-config-flat-gitignore": "^0.1.5",
+    "eslint-flat-config-utils": "^0.2.5",
+    "eslint-merge-processors": "^0.1.0",
+    "eslint-plugin-antfu": "^2.3.3",
+    "eslint-plugin-command": "^0.2.3",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import-x": "^0.5.1",
+    "eslint-plugin-jsdoc": "^48.2.6",
+    "eslint-plugin-jsonc": "^2.16.0",
+    "eslint-plugin-markdown": "^5.0.0",
+    "eslint-plugin-n": "^17.7.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-perfectionist": "^2.10.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-regexp": "^2.6.0",
+    "eslint-plugin-toml": "^0.11.0",
+    "eslint-plugin-unicorn": "^53.0.0",
+    "eslint-plugin-unused-imports": "^4.0.0",
+    "eslint-plugin-vitest": "^0.5.4",
+    "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-yml": "^1.14.0",
+    "eslint-processor-vue-blocks": "^0.1.2",
+    "globals": "^15.3.0",
+    "jsonc-eslint-parser": "^2.4.0",
+    "local-pkg": "^0.5.0",
+    "toml-eslint-parser": "^0.9.3",
+    "vue-eslint-parser": "^9.4.2",
+    "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   }
