--- a/packages/eslint-config/tsconfig.json
+++ b/packages/eslint-config/tsconfig.json
@@ -11,10 +11,10 @@
     "noUnusedLocals": true,
     "declaration": true,
     "esModuleInterop": true,
+    "isolatedDeclarations": true,
     "isolatedModules": true,
     "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
-    "isolatedDeclarations": true
+    "skipLibCheck": true
   },
   "include": ["**/*.ts"]
 }
