--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,7 +2,7 @@
   "name": "@ayingott/eslint-config",
   "type": "module",
   "version": "1.4.8",
-  "packageManager": "pnpm@9.14.4",
+  "packageManager": "pnpm@9.15.1",
   "description": "@ayingott/eslint-config",
   "author": "LoTwT <l709937065@gmail.com>",
   "license": "MIT",
@@ -50,29 +50,29 @@
     "prettier": ">=3.0.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^3.11.2",
+    "@antfu/eslint-config": "^3.12.1",
     "@ayingott/eslint-config-prettier": "workspace:*",
     "@ayingott/sucrose": "^0.0.37",
-    "@eslint-react/eslint-plugin": "^1.17.2",
-    "@stylistic/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "@unocss/eslint-plugin": "^0.65.0-beta.3",
+    "@eslint-react/eslint-plugin": "^1.22.1",
+    "@stylistic/eslint-plugin": "^2.12.1",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "@unocss/eslint-plugin": "^0.65.2",
     "eslint-config-flat-gitignore": "^0.3.0",
     "eslint-flat-config-utils": "^0.4.0",
     "eslint-merge-processors": "^0.1.0",
     "eslint-plugin-antfu": "^2.7.0",
-    "eslint-plugin-command": "^0.2.6",
+    "eslint-plugin-command": "^0.2.7",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import-x": "^4.4.3",
-    "eslint-plugin-jsdoc": "^50.6.0",
+    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-plugin-jsdoc": "^50.6.1",
     "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-n": "^17.14.0",
+    "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.1.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-perfectionist": "^4.4.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-toml": "^0.12.0",
     "eslint-plugin-unicorn": "^56.0.1",
@@ -81,7 +81,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "eslint-plugin-yml": "^1.16.0",
     "eslint-processor-vue-blocks": "^0.1.2",
-    "globals": "^15.12.0",
+    "globals": "^15.14.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.1",
     "toml-eslint-parser": "^0.10.0",
@@ -89,7 +89,7 @@
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.2",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   }
