--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -22,10 +22,6 @@
     ".": {
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
-    },
-    "./antfu": {
-      "import": "./dist/antfu.js",
-      "require": "./dist/antfu.cjs"
     }
   },
   "main": "./dist/index.cjs",
@@ -52,41 +48,7 @@
   "dependencies": {
     "@antfu/eslint-config": "^3.12.1",
     "@ayingott/eslint-config-prettier": "workspace:*",
-    "@ayingott/sucrose": "^0.0.37",
-    "@eslint-react/eslint-plugin": "^1.22.2",
-    "@stylistic/eslint-plugin": "^2.12.1",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "@unocss/eslint-plugin": "^0.65.3",
-    "eslint-config-flat-gitignore": "^0.3.0",
-    "eslint-flat-config-utils": "^0.4.0",
-    "eslint-merge-processors": "^0.1.0",
-    "eslint-plugin-antfu": "^2.7.0",
-    "eslint-plugin-command": "^0.2.7",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-jsdoc": "^50.6.1",
-    "eslint-plugin-jsonc": "^2.18.2",
-    "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.4.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "eslint-plugin-regexp": "^2.7.0",
-    "eslint-plugin-toml": "^0.12.0",
-    "eslint-plugin-unicorn": "^56.0.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vitest": "^0.5.4",
-    "eslint-plugin-vue": "^9.32.0",
-    "eslint-plugin-yml": "^1.16.0",
-    "eslint-processor-vue-blocks": "^0.1.2",
-    "globals": "^15.14.0",
-    "jsonc-eslint-parser": "^2.4.0",
-    "local-pkg": "^0.5.1",
-    "toml-eslint-parser": "^0.10.0",
-    "vue-eslint-parser": "^9.4.3",
-    "yaml-eslint-parser": "^1.2.3"
+    "@ayingott/sucrose": "^0.0.37"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
