--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "typescript": "^5.7.3"
   },
   "pnpm": {
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ],
     "onlyBuiltDependencies": [
       "simple-git-hooks"
     ]
