feat(eslint-config): support tailwindcss

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -45,9 +45,11 @@
   "dependencies": {
     "@antfu/eslint-config": "^4.2.0",
     "@ayingott/eslint-config-prettier": "workspace:*",
-    "@ayingott/sucrose": "^0.0.37"
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "local-pkg": "^1.1.1"
   },
   "devDependencies": {
+    "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/node": "^22.13.4",
     "tsdown": "^0.5.9",
     "typescript": "^5.7.3"
