--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,7 +2,7 @@
   "name": "@ayingott/eslint-config",
   "type": "module",
   "version": "2.0.1",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.10.0",
   "description": "@ayingott/eslint-config",
   "author": "LoTwT <l709937065@gmail.com>",
   "license": "MIT",
@@ -43,15 +43,15 @@
     "prettier": ">=3.0.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^4.4.0",
+    "@antfu/eslint-config": "catalog:",
     "@ayingott/eslint-config-prettier": "workspace:*",
-    "eslint-plugin-tailwindcss": "^3.18.0",
-    "local-pkg": "^1.1.1"
+    "eslint-plugin-tailwindcss": "catalog:",
+    "local-pkg": "catalog:"
   },
   "devDependencies": {
-    "@types/eslint-plugin-tailwindcss": "^3.17.0",
-    "@types/node": "^22.13.9",
-    "tsdown": "^0.6.2",
-    "typescript": "^5.8.2"
+    "@types/eslint-plugin-tailwindcss": "catalog:",
+    "@types/node": "catalog:",
+    "tsdown": "catalog:",
+    "typescript": "catalog:"
   }
 }
