--- a/packages/eslint-config-prettier/package.json
+++ b/packages/eslint-config-prettier/package.json
@@ -2,7 +2,7 @@
   "name": "@ayingott/eslint-config-prettier",
   "type": "module",
   "version": "2.0.1",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.10.0",
   "description": "@ayingott/eslint-config-prettier",
   "author": "LoTwT <l709937065@gmail.com>",
   "license": "MIT",
@@ -43,13 +43,13 @@
     "prettier": ">=3.0.0"
   },
   "dependencies": {
-    "@ayingott/sucrose": "^0.0.37",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-prettier": "^5.2.3"
+    "@ayingott/sucrose": "catalog:",
+    "eslint-config-prettier": "catalog:",
+    "eslint-plugin-prettier": "catalog:"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.4.0",
-    "tsdown": "^0.6.2",
-    "typescript": "^5.8.2"
+    "@antfu/eslint-config": "catalog:",
+    "tsdown": "catalog:",
+    "typescript": "catalog:"
   }
 }
