--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,26 @@
 packages:
   - packages/*
+
+catalog:
+  "@antfu/eslint-config": ^4.12.0
+  "@ayingott/prettier-config": ^2.1.2
+  "@ayingott/sucrose": ^0.0.37
+  "@types/eslint-plugin-tailwindcss": ^3.17.0
+  "@types/node": ^22.15.3
+  bumpp: ^10.1.0
+  eslint: ^9.25.1
+  eslint-config-prettier: ^10.1.2
+  eslint-plugin-prettier: ^5.2.6
+  eslint-plugin-tailwindcss: ^3.18.0
+  lint-staged: ^15.5.1
+  local-pkg: ^1.1.1
+  prettier: ^3.5.3
+  simple-git-hooks: ^2.13.0
+  taze: ^19.0.4
+  tsdown: ^0.10.0
+  typescript: ^5.8.3
+
+onlyBuiltDependencies:
+  - rolldown
+  - simple-git-hooks
+  - unrs-resolver
